# bagginghsf

./: .gitignore  experiment.py  pyproject.toml  recal.config.yaml  sparsify.py
bagginghsf/data/: dataloader.py  loader.py
bagginghsf/models/: buildingblocks.py  helpers.py  layers.py  losses.py  models.py
conf/: config.yaml
conf/datasets/: all.yaml
conf/lightning/: default_trainer.yaml  test_trainer.yaml
conf/logger/: comet.yaml  neptune.yaml
conf/models/: homogeneous.yaml  homogeneous_arunet.yaml  homogeneous_zhu.yaml  test.yaml
tests/: test_bagginghsf.py
